# tor-wasm

./: .gitignore  ARTI-WASM-SOLUTIONS.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY-ARCHITECTURE.md  SECURITY.md  THREAT-MODEL.md
.github/workflows/: censorship-sim.yml  ci.yml  mobile-test.yml
app/: index.html  manifest.json  sw.js
app/i18n/: en.json  fa.json  ru.json  zh.json
bridge-server/: DEPLOY-BLINDED.md  Dockerfile  Dockerfile.bridge-a  Dockerfile.bridge-b  Dockerfile.meek  cover-site.js  dns-safe.js  docker-compose-blinded.yml  health-auth.js  install.sh  keygen.js  logger.js  lox-authority.js  package.json  railway.json  server-bridge-a.js  server-bridge-b.js  server-collector.js  server-meek.js  server-onionoo.js  server-production.js  server-tls-proxy.js  server-webtunnel.js  test-bridge-blind.js  tor-http-proxy.js  traffic-monitor.js  verify-ech.sh
bridge-server/distribution/: email-responder.js  qr-generator.js  telegram-bot.js
broker/: Dockerfile  package.json  server.js
examples/: arti_test.rs  basic_usage.rs  cloud-bridge.html  cooperative-test.html  fingerprint-defense-demo.html  ios-safari-demo.html  llm-demo.html
papers/: BRIDGE-TRUST-ELIMINATION.md  OTF-CONCEPT-NOTE-V2.md  OTF-ENGAGEMENT-PLAN.md  OTF-PRIOR-BROWSER-TOR-RESEARCH.md  OTF-TECHNICAL-ARCHITECTURE-APPENDIX-V2.md
proxy/: index.html  proxy.js
src/: arti_impls.rs  bridge_config.rs  circuit.rs  circuit_pool.rs  congestion.rs  connection_pool.rs  crypto.rs  error.rs  fingerprint-defense.js  guards.rs  isolation.rs  lib.rs  lox_client.rs  padding.rs  parallel_builder.rs  rate_limiter.rs  relay_verifier.rs  security_tests.rs  stream_mux.rs  traffic_shaping.rs
src/cooperative/: mod.rs  scheduler.rs  stream.rs  tls.rs
src/fingerprint_defense/: iframe_observer.rs  mod.rs  prng.rs  profile.rs  proxy_helpers.rs  tier1_canvas.rs  tier1_navigator.rs  tier1_screen.rs  tier1_webgl.rs  tier1_webrtc.rs  tier2_audio.rs  tier2_client_rects.rs  tier2_fonts.rs  tier2_performance.rs  tier2_timezone.rs  tier3_hardening.rs
src/network/: connection_manager.rs  error_handling.rs  mod.rs  provider.rs  tls.rs
src/protocol/: cell.rs  certs.rs  circuit_builder.rs  consensus.rs  consensus_verify.rs  crypto.rs  directory.rs  flow_control.rs  mod.rs  ntor.rs  relay.rs  stream.rs  tls_stream.rs
src/runtime/: compat.rs  mod.rs  sleep.rs  spawn.rs  stubs.rs  tcp.rs  time.rs  traits_impl.rs
src/storage/: arti_adapter.rs  circuit_state.rs  indexeddb.rs  mod.rs  serde_helpers.rs
src/transport/: bridge_blind.rs  meek.rs  mod.rs  unified.rs  webrtc.rs  websocket.rs  webtunnel.rs
tests/: fingerprint_defense_test.rs  network_integration.rs  protocol_security_test.rs
tests/censorship-sim/: active-prober.js  dns-leak.js  signature-scanner.js  traffic-classifier.js
tests/degraded-network/: benchmark.sh
tests/mobile/: MOBILE-TESTING.md  browserstack.config.js  core-suite.js
tests/traffic-analysis/: validate.js
tools/: bundle-offline.js
tor-core/: Cargo.toml  test-wasm.js
tor-core/src/: crypto.rs  error.rs  lib.rs  protocol.rs
worker/: build.js  package.json  wrangler.toml
worker/src/: index.ts
